# ampform

./: .cspell.json  .editorconfig  .envrc  .flake8  .gitignore  .gitpod.yml  .markdownlint.json  .mypy.ini  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pydocstyle  .pylintrc  .readthedocs.yml  .taplo.toml  .travis.yml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  commitlint.config.js  comparison-canonical-helicity.ipynb  cspell.json  environment.yml  labels.toml  particle_list.xml  particle_list.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.binder/: postBuild
.constraints/: .gitignore  pin_requirements.py  py3.10.txt  py3.11.txt  py3.12.txt  py3.6.txt  py3.7.txt  py3.8.txt  py3.9.txt  upgrade.sh
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: adr_pull_request.md  pull_request_template.md
.github/workflows/: benchmark.yml  cd.yml  ci-docs.yml  ci-qrules-v0.9.yml  ci-style.yml  ci-tests.yml  ci.yml  clean-cache.yml  clean-caches.yml  linkcheck.yml  lock.yml  milestone.yml  pr-linting.yml  pr-name.yml  pypi.yml  redirect-gh-pages.yml  release-drafter.yml  requirements-cron.yml  requirements-pr.yml  requirements.yml
.pre-commit-hooks/: fix_first_nbcell.py  fix_nbformat_version.py
.reqs/: dev.in  doc.in  doc.txt  sty.in  sty.txt  test.in  test.txt
benchmarks/: conftest.py  doit_speed.py
doc/: .gitignore  Makefile  adr.rst  api.rst  conf.py  contribute.rst  index.md  index.rst  install.rst  installation.rst  interactive.ipynb  interactive.rst  requirements.txt  usage.ipynb  usage.rst
doc/_templates/: genindex.html  layout.html  package.rst_t
doc/adr/: 0000-use-markdown-architectural-decision-records.md  index.rst  template.md
doc/install/: get-the-source-code.rst  install.rst  virtual-environment.rst
doc/usage/: particles.ipynb  quickstart.ipynb  visualization.ipynb  workflow.ipynb
docs/: .gitignore  _extend_docstrings.py  _generate_wigner_code.py  _relink_references.py  abbreviate_signature.py  adr.md  amplitude.ipynb  analyticity.md  api.rst  bibliography.bib  conf.py  contribute.rst  develop.rst  dynamics.ipynb  environment.yml  extend_docstrings.py  index.ipynb  index.md  install.md  install.rst  interactive.ipynb  references.md  sympy.ipynb  usage.ipynb  usage.md
docs/_static/: custom.css  linebreaks-api.css
docs/_templates/: genindex.html  module.rst_t  package.rst_t
docs/adr/: 000-adrs.md  001-amplitude-model.md  001.md  002.md  template.md
docs/amplitude/: formalism.ipynb  interactive.ipynb  modify.ipynb
docs/analyticity/: integration-algorithms.ipynb  phasespace-factor-widget.ipynb  phasespace-factors.ipynb
docs/dynamics/: custom.ipynb  k-matrix.ipynb
docs/usage/: .gitignore  additional_particles.yml  amplitude.ipynb  breakupmomentum.ipynb  dynamics.ipynb  dynamics.md  formalism.ipynb  interactive.ipynb  iplot.md  k-matrix.ipynb  kinematics.ipynb  modify.ipynb  particle.ipynb  particles.ipynb  reaction.ipynb  symplot.ipynb  symplot.md  sympy.ipynb  transition.ipynb  visualization.ipynb  visualize.ipynb  workflow.ipynb
examples/: particles.ipynb  quick_start.ipynb  quickstart.ipynb  visualization.ipynb
examples/jupyter/: QuickStart.ipynb
examples/python/: D0ToKs0KpKm.xml  EpEmToChicPipPim.py  EpEmToD0D0barPipPim.py  JPsiToGammaPi0Pi0.xml  JPsiToPi0PipPim.py  epem_to_chicpipi.py  jpsi_to_pipipi.py
expertsystem/: __init__.py  _utils.py  data.py  nested_dicts.py  particle.py  particle_list.xml  particle_list.yml  topology.py
expertsystem/amplitude/: __init__.py  _yaml_adapter.py  abstract_generator.py  abstractgenerator.py  canonical_decay.py  canonicaldecay.py  helicity_decay.py  helicitydecay.py  model.py
expertsystem/io/: __init__.py  _dot.py  _pdg.py  dot.py
expertsystem/reaction/: __init__.py  _default_settings.py  _system_control.py  combinatorics.py  conservation_rules.py  quantum_numbers.py  solving.py  topology.py
expertsystem/schemas/: README.md  yaml-particle-list.json
expertsystem/solvers/: __init__.py
expertsystem/solving/: __init__.py  conservation_rules.py
expertsystem/state/: __init__.py  combinatorics.py  conservation_rules.py  conservationrules.py  particle.py  propagation.py  properties.py
expertsystem/topology/: __init__.py  graph.py  topology_builder.py  topologybuilder.py
expertsystem/ui/: __init__.py  _default_settings.py  _system_control.py  default_settings.py  system_control.py
expertsystem/visualization/: __init__.py
pycompwa/pycompwa/: __init__.py
reqs/: .gitignore  extract_install_requires.py  requirements-dev.in  requirements-doc.in  requirements-sty.in  requirements-test.in  upgrade.sh
reqs/3.6/: requirements-dev.txt  requirements-doc.txt  requirements-extras.txt  requirements-sty.txt  requirements-test.txt  requirements.txt
reqs/3.7/: requirements-dev.txt  requirements-doc.txt  requirements-extras.txt  requirements-sty.txt  requirements-test.txt  requirements.txt
reqs/3.8/: requirements-dev.txt  requirements-doc.txt  requirements-extras.txt  requirements-sty.txt  requirements-test.txt  requirements.txt
reqs/3.9/: requirements-dev.txt  requirements-doc.txt  requirements-extras.txt  requirements-sty.txt  requirements-test.txt  requirements.txt
src/ampform/: __init__.py  _graph_info.py  _qrules.py  _transition_info.py  data.py  helicity.py  kinematics.py  sympy.py
src/expertsystem/: __init__.py  additional_particle_definitions.yml  particle.py
test/: conftest.py  tox.ini
tests/: .coveragerc  .gitignore  EpEmToChicPipPim.py  EpEmToD0D0barPipPim.py  JPsiToPi0PipPim.py  conftest.py  pytest.ini  requirements.txt  test_D0ToKsKpKm.py  test_JPsiToGammaPi0Pi0Decay.py  test_YToD0D0barPi0Pi0.py  test_angular_distributions.py  test_angular_momentum.py  test_data.py  test_dynamics.py  test_graph_info.py  test_helicity.py  test_kinematics.py  test_nbody_reactions.py  test_parity_prefactor.py  test_transition_info.py
typings/: .gitignore  README.md
(+380 files in other folders)
