[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]

[project]
authors = [{name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "attrs >=20.1.0", # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
    "frozendict",
    "qrules>=0.9.6",
    "sympy >=1.10",
]
description = "Automatically generate symbolic amplitude models for Partial Wave Analysis"
dynamic = ["version"]
keywords = [
    "HEP",
    "PWA",
    "amplitude analysis",
    "partial wave analysis",
    "particle physics",
    "particles",
    "physics",
]
license = {file = "LICENSE"}
maintainers = [{email = "compwa-admin@ep1.rub.de"}]
name = "ampform"
requires-python = ">=3.10"

[project.optional-dependencies]
scipy = ["scipy"]
viz = ["graphviz"]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.urls]
Changelog = "https://github.com/ComPWA/ampform/releases"
Documentation = "https://ampform.rtfd.io"
Source = "https://github.com/ComPWA/ampform"
Tracker = "https://github.com/ComPWA/ampform/issues"

[dependency-groups]
dev = [
    "ruff",
    {include-group = "doc"},
    {include-group = "jupyter"},
    {include-group = "style"},
    {include-group = "test"},
]
doc = [
    "myst-nb",
    "sphinx",
    "sphinx-api-relink >=0.0.4",
    "sphinx-book-theme",
    "sphinx-codeautolink[ipython]",
    "sphinx-comments",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-hep-pdgref",
    "sphinx-pybtex-etal-style",
    "sphinx-thebe",
    "sphinx-togglebutton",
    "sphinxcontrib-bibtex >=2",
    {include-group = "notebooks"},
]
jupyter = [
    "jupyterlab",
    "jupyterlab-code-formatter",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "jupyterlab-myst",
    "jupyterlab-quickopen",
    "python-lsp-ruff",
    "python-lsp-server[rope]",
]
notebooks = [
    "ampform[scipy,viz]",
    "black",
    "ipympl",
    "matplotlib",
    "mpl-interactions",
    "numpy",
    "rich",
]
style = [
    "ty",
    {include-group = "types"},
]
test = [
    "ampform[scipy]",
    "ipywidgets", # symplot
    "numpy",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-profiling",
    "pytest-xdist",
]
types = [
    "IPython",
    "ipywidgets",
    "numpy",
    "pytest",
    "pytest-benchmark",
    "sphinx-api-relink >=0.0.3",
    {include-group = "notebooks"},
]

[tool.setuptools]
include-package-data = false
package-dir = {"" = "src"}

[tool.setuptools.package-data]
ampform = ["py.typed"]
symplot = ["py.typed"]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools_scm]
write_to = "src/ampform/version.py"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
omit = [
    "benchmarks/**/*.py",
    "docs/**/*.ipynb",
    "docs/**/*.py",
    "examples/**/*.py",
    "tests/**/*.py",
]
source = ["src"]

[tool.poe.executor]
isolated = true
no-group = "dev"
type = "uv"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = [
    "benchmark",
    "cov",
    "docnb-force",
    "linkcheck",
    "style",
    "test-all",
]

[tool.poe.tasks.benchmark]
cmd = """
pytest benchmarks \
    --benchmark-autosave \
    --benchmark-json benchmarks/output.json \
    --durations=0 \
    -k benchmark
"""
executor = {group = "test"}
help = "Run benchmark tests and visualize performance"

[tool.poe.tasks.cov]
cmd = """
pytest \
    --cov=ampform \
    --cov-fail-under=75 \
    --cov-report=html \
    --cov-report=xml \
    --numprocesses=auto \
    ${paths}
"""
executor = {group = "test"}
help = "Compute how much of the source code is covered by tests"

[[tool.poe.tasks.cov.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.doc]
cmd = """
sphinx-build \
    --builder=html \
    --fail-on-warning \
    --keep-going \
    --show-traceback \
    docs/ \
    docs/_build/html/
"""
env = {PYTHONWARNINGS = ""}
executor = {group = "doc"}
help = "Build documentation and API"

[tool.poe.tasks.doclive]
cmd = """
sphinx-autobuild \
    --builder=html \
    --open-browser \
    --port=0 \
    --re-ignore=/__pycache__(/.*)?$ \
    --re-ignore=/_build(/.*)?$ \
    --re-ignore=/_images(/.*)?$ \
    --re-ignore=/\\.cache(/.*)?$ \
    --re-ignore=/\\.egg-info(/.*)?$ \
    --re-ignore=/\\.ipynb_checkpoints(/.*)?$ \
    --re-ignore=/\\.virtual_documents(/.*)?$ \
    --re-ignore=/api(/.*)?$ \
    --re-ignore=/docs$ \
    --re-ignore=/version\\.py$ \
    --re-ignore=\\.egg-info(/.*)?$ \
    --re-ignore=\\.gif$ \
    --re-ignore=\\.pickle$ \
    --re-ignore=\\.png$ \
    --re-ignore=\\.svg$ \
    --watch=src \
    docs/ \
    docs/_build/html/
"""
executor = {group = "doc", with = "sphinx-autobuild"}
help = "Set up a server to directly preview changes to the HTML pages"

[tool.poe.tasks.docnb]
env = {EXECUTE_NB = "yes"}
help = "Build documentation and API with cached notebook execution"
sequence = ["doc"]

[tool.poe.tasks.docnb-force]
env = {FORCE_EXECUTE_NB = "yes"}
help = "Build documentation and API with notebook execution (no cache)"
sequence = ["doc"]

[tool.poe.tasks.docnblive]
env = {EXECUTE_NB = "yes"}
help = "Set up a server to directly preview changes to the HTML pages with cached notebook execution"
sequence = ["doclive"]

[tool.poe.tasks.lab]
args = [{name = "paths", default = "", positional = true}]
cmd = "jupyter lab ${paths}"
executor = {group = ["jupyter", "notebooks"]}
help = "Launch Jupyter Lab"

[tool.poe.tasks.linkcheck]
cmd = """
sphinx-build \
    --builder=linkcheck \
    --fail-on-warning \
    --show-traceback \
    docs/ \
    docs/_build/linkcheck/
"""
env = {PYTHONWARNINGS = ""}
executor = {group = "doc"}
help = "Check external links in the documentation (requires internet connection)"

[tool.poe.tasks.nb]
args = [{name = "paths", default = "docs", multiple = true, positional = true}]
cmd = "pytest --nbmake --nbmake-timeout=0 ${paths}"
executor = {group = "notebooks", with = "nbmake"}
help = "Run all notebooks"

[tool.poe.tasks.style]
cmd = "pre-commit run --all-files"
executor = {extra = "scipy", group = "style"}
help = "Perform all linting, formatting, and spelling checks"

[tool.poe.tasks.test]
cmd = "pytest -m 'slow or not slow' --numprocesses=auto ${paths}"
executor = {group = "test"}
help = "Run all unit tests"

[[tool.poe.tasks.test.args]]
default = "src tests"
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.test-all]
help = "Run all tests on each supported Python version"
sequence = [
    {ref = "test-py310 ${paths}"},
    {ref = "test-py311 ${paths}"},
    {ref = "test-py312 ${paths}"},
    {ref = "test-py313 ${paths}"},
    {ref = "test-py314 ${paths}"},
]

[[tool.poe.tasks.test-all.args]]
default = ""
multiple = true
name = "paths"
positional = true

[tool.poe.tasks.test-py310]
env = {UV_PYTHON = "3.10"}
ref = "test"

[tool.poe.tasks.test-py311]
env = {UV_PYTHON = "3.11"}
ref = "test"

[tool.poe.tasks.test-py312]
env = {UV_PYTHON = "3.12"}
ref = "test"

[tool.poe.tasks.test-py313]
env = {UV_PYTHON = "3.13"}
ref = "test"

[tool.poe.tasks.test-py314]
env = {UV_PYTHON = "3.14"}
ref = "test"

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--doctest-continue-on-failure",
    "--doctest-modules",
    "--durations=3",
    "--ignore=docs/abbreviate_signature.py",
    "--ignore=docs/conf.py",
    "-m not slow",
    "-rS",
]
filterwarnings = [
    "error",
    "ignore: The `hash` argument is deprecated in favor of `unsafe_hash` and will be removed in or after August 2025.:DeprecationWarning",
    "ignore:.*Benchmarks are automatically disabled.*",
    "ignore:.*invalid value encountered in sqrt.*:RuntimeWarning",
    "ignore:.*is deprecated and slated for removal in Python 3.14:DeprecationWarning",
    "ignore:.*the @ampform.sympy.unevaluated_expression decorator instead( with commutative=True)?:DeprecationWarning",
    "ignore:Passing a schema to Validator.iter_errors is deprecated.*:DeprecationWarning",
    "ignore:The distutils package is deprecated.*:DeprecationWarning",
    "ignore:The distutils.* module is deprecated.*:DeprecationWarning",
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated and scheduled for removal in a future version.*:DeprecationWarning",
    "ignore:unclosed .*:ResourceWarning",
    'ignore:Widget\..* is deprecated\.:DeprecationWarning',
]
markers = ["slow: marks tests as slow (select with '-m slow')"]
norecursedirs = [
    ".ipynb_checkpoints",
    ".virtual_documents",
    "_build",
]
testpaths = [
    "benchmarks",
    "src",
    "tests",
]

[tool.ruff]
extend-exclude = ["typings"]
extend-include = ["*.ipynb"]
preview = true
show-fixes = true
src = [
    "src",
    "tests",
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN",
    "ARG00",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FBT00",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLR0913",
    "PLW1514",
    "PLW2901",
    "PT001",
    "PTH",
    "RUF067",
    "SIM108",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "ampform.sympy._decorator.argument",
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-self]
ignore-names = [
    "_latex",
    "_module",
    "_numpycode",
    "_print",
]

[tool.ruff.lint.isort]
known-third-party = ["sympy"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "B018",
    "C408",
    "C90",
    "D",
    "E303",
    "E402",
    "E703",
    "F404",
    "N803",
    "N806",
    "N816",
    "PLC2401",
    "PLR09",
    "PLR2004",
    "PLW0602",
    "PLW0603",
    "S101",
    "S301",
    "S403",
    "SLF001",
    "T20",
    "TC00",
]
"**/docs/usage/dynamics.ipynb" = ["FURB118", "RUF027"]
"**/docs/usage/symplot.ipynb" = ["RUF027"]
"**/docs/usage/sympy.ipynb" = ["E731"]
"benchmarks/*" = [
    "D",
    "INP001",
    "PGH001",
    "PLC2701",
    "PLR2004",
    "PLR6301",
    "S101",
    "SLF001",
    "T20",
]
"docs/*" = [
    "E402",
    "INP001",
    "N802",
    "N806",
    "S101",
    "S113",
    "S403",
    "T201",
]
"docs/_extend_docstrings.py" = [
    "N816",
    "PLC0415",
    "PLC2701",
]
"docs/conf.py" = [
    "A001",
    "D100",
]
"setup.py" = ["D100"]
"tests/*" = [
    "C408",
    "D",
    "INP001",
    "PGH001",
    "PLC2701",
    "PLR0914",
    "PLR0917",
    "PLR2004",
    "PLR6301",
    "S101",
    "SLF001",
    "T20",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["_latex_repr_", "_repr_pretty_"]
max-positional-args = 7

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = [
    "build-system",
    "project",
    "tool.setuptools",
    "tool.setuptools_scm",
]
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[[tool.ty.overrides]]
include = ["docs/**"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "ignore"

[[tool.ty.overrides]]
include = [
    "docs/usage/dynamics/analytic-continuation.ipynb",
    "docs/usage/dynamics/k-matrix.ipynb",
    "docs/usage/helicity/formalism.ipynb",
    "docs/usage/interactive.ipynb",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = [
    "src/ampform/sympy/**",
    "tests/sympy/**",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["tests/external/test_sympy.py"]

[tool.ty.overrides.rules]
call-non-callable = "ignore"

[tool.ty.rules]
division-by-zero = "warn"
invalid-argument-type = "ignore"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"
unknown-argument = "ignore"
unsupported-operator = "ignore"

[tool.uv.sources]
qrules = {git = "https://github.com/ComPWA/qrules", rev = "75bc682a56ca07b1eadeafeca4fb1676de7281b4"}
sphinx-api-relink = {git = "https://github.com/ComPWA/sphinx-api-relink", rev = "28e1b79191efbba93dbab3aa101003c33ea4fb90"}
